modified:   lab02/lab02.html 	new file:   lab03/lab03.html 	new file:   lab03/style.css

--- a/lab02/lab02.html
+++ b/lab02/lab02.html
@@ -227,6 +227,7 @@
         </div>
     </div>
     <div style="width:100%; font-size: 28px; ">
+        <h1 style="text-align: left; font-size: 31px">Bài 5:</h1>
         <center>
         <ol start="1" class="list">
             <li class="li1">Cao đẳng hệ chính quy (3 năm)
